# sloper-pocket-crimp

./: README.md  pyproject.toml
sloper_pocket_crimp/: __init__.py  exceptions.py  game.py  gestures.py  outcomes.py  players.py
tests/: test_exceptions.py  test_game.py  test_gestures.py  test_outcomes.py  test_players.py
